<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_character"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teicm.fiveandone.characterActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/back"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textAppearance="?android:textAppearance"
        android:layout_gravity="center_horizontal"
        android:textColor="#990033"
        android:id="@+id/result"
        android:textStyle="normal|bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/male"
            android:text="@string/male"
            android:onClick="selectSex"
            android:textColor="#990033"

            />

        <RadioButton
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:text="@string/female"
            android:onClick="selectSex"
            android:textColor="#990033"
            />


    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name Character"
        android:textAppearance="?android:textAppearance"
        android:layout_gravity="center_horizontal"
        android:id="@+id/name_character"
        android:textColor="#990033"
        android:textStyle="normal|bold" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/namChar"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_hair_color"
        android:layout_alignParentLeft="true"
        android:id="@+id/hair"
        android:textStyle="normal|bold"
        android:textColor="#990033"
        android:layout_gravity="center_horizontal"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"

        android:textColor="#990033"



        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_eye"
        android:textColor="#990033"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal|bold"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_blue"
        android:text="@string/blue"
        android:textColor="#990033"
        android:onClick="selectItem"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_black"
        android:text="@string/black"
        android:textColor="#990033"
        android:onClick="selectItem"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_green"
        android:text="@string/green"
        android:textColor="#990033"
        android:onClick="selectItem"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_brown"
        android:text="@string/brown"
        android:textColor="#990033"
        android:onClick="selectItem"
        />

    <Button
        android:text="Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:textColor="#990033"
        android:onClick="addContact"
        android:layout_alignParentStart="true"



        />

    <Button
        android:text="Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:textColor="#990033"
        android:onClick="back"
        />


</LinearLayout>