<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.teicm.fiveandone.User">


    <TextView
        android:text="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtoutput"
        android:layout_alignStart="@+id/txtinput"
        android:layout_alignBottom="@+id/btnSubmit"
        android:layout_below="@+id/txtinput"
        android:layout_toStartOf="@+id/name_character" />

    <Button
        android:text="Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/name_character"
        android:onClick="btnSubmit" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_green"
        android:text="@string/green"
        android:onClick="selectItem"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/eye_black"
        android:layout_marginBottom="65dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_black"
        android:text="@string/black"
        android:onClick="selectItem"
        android:layout_above="@+id/eye_green"
        android:layout_alignStart="@+id/txtoutput" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_brown"
        android:text="@string/brown"
        android:onClick="selectItem"
        android:layout_above="@+id/eye_black"
        android:layout_alignStart="@+id/txtoutput" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eye_blue"
        android:text="@string/blue"
        android:onClick="selectItem"
        android:layout_above="@+id/eye_brown"
        android:layout_alignStart="@+id/txtoutput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eye Color"
        android:textAppearance="?android:textAppearance"
        android:id="@+id/textView8"
        android:textStyle="normal|bold"
        android:layout_above="@+id/eye_blue"
        android:layout_alignEnd="@+id/SelectSex" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/SelectSex"
        android:layout_alignParentStart="true">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:text="Female"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/male"
            android:text="Male"
            android:layout_marginTop="26dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Select"
            android:id="@+id/finalresult"
            android:textStyle="normal|bold"
            android:layout_below="@+id/radioGroup"
            android:layout_toEndOf="@+id/txtinput"
            android:layout_weight="1" />


    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/back"
        android:background="@color/white"
        android:id="@+id/btnBack"
        android:layout_above="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Sex"
        android:textAppearance="?android:textAppearance"
        android:layout_gravity="center_horizontal"
        android:id="@+id/SelectSex"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/name_character" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Type here"
        android:ems="10"
        android:id="@+id/txtinput"
        android:layout_marginStart="35dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name of Character"
        android:textAppearance="?android:textAppearance"
        android:layout_gravity="center_horizontal"
        android:id="@+id/name_character"
        android:textStyle="normal|bold"
        android:layout_alignBottom="@+id/txtinput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="select hair collor"
        android:textAppearance="?android:textAppearance"
        android:layout_gravity="center_horizontal"
        android:id="@+id/hair"
        android:textStyle="normal|bold"
        android:layout_below="@+id/radioGroup"
        android:layout_alignStart="@+id/name_character" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/spinner_item"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/hair"
        android:layout_alignParentStart="true" />

</RelativeLayout>
